[maven-release-plugin] rollback the release of fsm-1.0.0

--- a/pom.xml
+++ b/pom.xml
@@ -135,8 +135,8 @@
 	</distributionManagement>
 
 	<scm>
-		<connection>scm:git:ssh://git@github.com/daniellas/fsm.git</connection>
-		<developerConnection>scm:git:ssh://git@github.com/daniellas/fsm.git</developerConnection>
+		<connection>scm:git:ssh://git@github.com:daniellas/fsm.git</connection>
+		<developerConnection>scm:git:ssh://git@github.com:daniellas/fsm.git</developerConnection>
 		<tag>HEAD</tag>
 	</scm>
 
