--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.lynx</groupId>
 	<artifactId>fsm</artifactId>
-	<version>2.0.0</version>
+	<version>2.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>FSM</name>
 	<url>http://maven.apache.org</url>
@@ -141,7 +141,7 @@
 	<scm>
 		<connection>scm:git:ssh://git@github.com/daniellas/fsm.git</connection>
 		<developerConnection>scm:git:ssh://git@github.com/daniellas/fsm.git</developerConnection>
-		<tag>fsm-2.0.0</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 </project>
