--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.lynx</groupId>
     <artifactId>fsm</artifactId>
-    <version>2.0.2-SNAPSHOT</version>
+    <version>2.0.2</version>
     <packaging>bundle</packaging>
     <name>FSM</name>
     <url>http://maven.apache.org</url>
@@ -157,7 +156,7 @@
     <scm>
         <connection>scm:git:ssh://git@github.com/daniellas/fsm.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/daniellas/fsm.git</developerConnection>
-        <tag>fsm-2.0.1</tag>
+        <tag>fsm-2.0.2</tag>
     </scm>
 
 </project>
