--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.lynx</groupId>
     <artifactId>fsm</artifactId>
-    <version>2.0.2</version>
+    <version>2.0.3-SNAPSHOT</version>
     <packaging>bundle</packaging>
     <name>FSM</name>
     <url>http://maven.apache.org</url>
@@ -156,7 +156,7 @@
     <scm>
         <connection>scm:git:ssh://git@github.com/daniellas/fsm.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/daniellas/fsm.git</developerConnection>
-        <tag>fsm-2.0.2</tag>
+        <tag>fsm-2.0.1</tag>
     </scm>
 
 </project>
