--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.lynx</groupId>
     <artifactId>fsm</artifactId>
@@ -19,7 +20,7 @@
                     <instructions>
                         <_noee>true</_noee>
                         <Export-Package>
-                            com.lynx.fsm;version="${project.version}"
+                            com.lynx.fsm
                         </Export-Package>
                     </instructions>
                 </configuration>
@@ -140,23 +141,33 @@
 
     <repositories>
         <repository>
-            <id>Cohesiva Releases</id>
-            <name>Cohesiva Releases</name>
-            <url>http://nexus.cohesiva.com:8080/nexus/content/repositories/releases</url>
+            <id>Smartup Releases</id>
+            <url>http://cilocal.smartup.company/nexus/content/repositories/releases</url>
+        </repository>
+        <repository>
+            <id>Smartup Snapshots</id>
+            <url>http://cilocal.smartup.company/nexus/content/repositories/snapshots</url>
+        </repository>
+        <repository>
+            <id>Smartup 3rd party</id>
+            <url>http://cilocal.smartup.company/nexus/content/repositories/thirdparty</url>
         </repository>
     </repositories>
 
     <distributionManagement>
         <repository>
-            <id>cohesiva</id>
-            <url>http://nexus.cohesiva.com:8080/nexus/content/repositories/releases</url>
+            <id>smartup</id>
+            <url>http://cilocal.smartup.company/nexus/content/repositories/releases</url>
         </repository>
+        <snapshotRepository>
+            <id>smartup</id>
+            <url>http://cilocal.smartup.company/nexus/content/repositories/snapshots</url>
+        </snapshotRepository>
     </distributionManagement>
 
     <scm>
         <connection>scm:git:ssh://git@github.com/daniellas/fsm.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/daniellas/fsm.git</developerConnection>
-        <tag>fsm-2.0.1</tag>
     </scm>
 
 </project>
